# pynac

./: .gitignore  .hgignore  AUTHORS  CONTRIBUTING.md  GiNaC.spec  INSTALL  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  PACKAGING.md  README  acinclude.m4  aclocal.m4  bootstrap  compile_commands.json  config.h  config.h.in  config.status  configure  configure.ac  ginac.pc  ginac.pc.in  libtool  pynac-0.6.1.tar.bz2  pynac.pc  pynac.pc.in  pynac.spec  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-sage.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
check/: Makefile.in
doc/: Makefile.in
doc/examples/: Makefile.in  ginac-examples.info
doc/reference/: Makefile.in
doc/tutorial/: Makefile.in  ginac.info  ginac.info-1  ginac.info-2  ginac.info-3  ginac.info-4  ginac.info-5  ginac.info-6  ginac.info-7  stamp-vti
ginac/: Makefile  Makefile.am  Makefile.in  Untitled Document 1~  add.cpp  basic.cpp  basic.h  cmatcher.cpp  cmatcher.h  context.cpp  context.h  ex.cpp  ex.h  expairseq.cpp  expairseq.h  flags.h  function.cpp  function.h  ginac.h  gmptypes.pxd  infinity.cpp  infinity.h  inifcns_gamma.cpp  inifcns_hyperb.cpp~  inifcns_orthopoly.cpp  inifcns_trans.cpp  inifcns_trig.cpp  matrix.cpp  mpoly-giac.cpp  mpoly-ginac.cpp  mpoly.h  mul.cpp  normal.cpp  normal.h  numeric.cpp  numeric.h  order.cpp  power.cpp  power.h  pseries.cpp  (+14 more)
ginsh/: Makefile.in  ginsh_lexer.cc  ginsh_parser.cc  ginsh_parser.h
m4/: am_check_python_headers.m4  am_check_python_lib.m4  ax_python_devel.m4
tools/: Makefile.in
